# SearchServer

./: .gitignore  CMakeLists.txt  README.md  iterator_range.h  parse.cpp  search_server.cpp  search_server.h  syncronized.h
